@@ -2,6 +2,7 @@
 	- eliminate old rpmrc configuration syntax.
 	- pgp5 support (Carlo Wood <carlo@runaway.xs4all.nl>)
 	- fix: segfault from double close on ftpGetFileDesc ftpAbort path.
+	- fix: don't add header if signature generation failed (Carlo Wood).
 
 2.91 -> 2.92
 	- update with libtool-2.4f.
